force-app/main/default/objects/Quote/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <formula>Opportunity.AddressLine2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddressLine2</label>
    <type>Text</type>
</CustomField>