force-app/main/default/objects/Quote/fields/AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>AddressLine3__c</fullName>
    <formula>Opportunity.AddressLine3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddressLine3</label>
    <type>Text</type>
</CustomField>