force-app/main/default/objects/Quote/fields/Coordinator_name__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_name__c</fullName>
    <label>Coordinator name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>