force-app/main/default/objects/Quote/fields/Customer_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Customer_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Accepted</label>
    <type>Checkbox</type>
</CustomField>