force-app/main/default/objects/Quote/fields/Exceeded_18_Hours__c.field-meta.xml
<CustomField>
    <fullName>Exceeded_18_Hours__c</fullName>
    <formula>AND(
 ISPICKVAL(Approval_Status__c , &quot;Approved&quot;),
 NOT(Quotation_Sent_to_Customer__c),
 NOT(ISBLANK(Quotation_Approved_DateTime__c)),
 Hours_Since_Approval__c &gt;= 18
)</formula>
    <label>Exceeded 18 Hours</label>
    <type>Checkbox</type>
</CustomField>