force-app/main/default/objects/Quote/fields/Followup_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Followup_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followup_Task_Created</label>
    <type>Checkbox</type>
</CustomField>