force-app/main/default/objects/Quote/fields/Freight_Charge__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge__c</fullName>
    <label>Freight Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>