force-app/main/default/objects/Quote/fields/Hours_Since_Approval__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Approval__c</fullName>
    <formula>IF(
 NOT(ISBLANK(Quotation_Approved_DateTime__c)),
 (NOW() - Quotation_Approved_DateTime__c) * 24,
 NULL
)</formula>
    <label>Hours Since Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>