force-app/main/default/objects/Quote/fields/Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Pin_Code__c</fullName>
    <formula>TEXT(Opportunity.Pin_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pin Code</label>
    <type>Text</type>
</CustomField>