force-app/main/default/objects/Quote/fields/Quotation_Approved_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Approved_DateTime__c</fullName>
    <label>Quotation Approved DateTime</label>
    <type>DateTime</type>
</CustomField>