force-app/main/default/objects/Quote/fields/Quotation_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Sent_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quotation Sent to Customer</label>
    <type>Checkbox</type>
</CustomField>