force-app/main/default/objects/Quote/fields/Quote_Category__c.field-meta.xml
<CustomField>
    <fullName>Quote_Category__c</fullName>
    <label>Quote Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SANITARY</fullName>
            </value>
            <value>
                <fullName>FITTINGS</fullName>
            </value>
            <value>
                <fullName>NATURAL STONE</fullName>
            </value>
            <value>
                <fullName>BATHING SOLUTIONS</fullName>
            </value>
            <value>
                <fullName>HEAD OFFICE</fullName>
            </value>
            <value>
                <fullName>VENGERI</fullName>
            </value>
            <value>
                <fullName>TILE</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>GLASS BRICK</fullName>
            </value>
            <value>
                <fullName>ROOF TILES</fullName>
            </value>
            <value>
                <fullName>ADHESIVES</fullName>
            </value>
            <value>
                <fullName>LIGHTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>