force-app/main/default/objects/Quote/fields/Quote_Number_Link__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , Quote_Number__c)</formula>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>