force-app/main/default/objects/Quote/fields/Quote_sent_date__c.field-meta.xml
<CustomField>
    <fullName>Quote_sent_date__c</fullName>
    <label>Quote sent date</label>
    <type>Date</type>
</CustomField>