force-app/main/default/objects/Quote/fields/Round_Off__c.field-meta.xml
<CustomField>
    <fullName>Round_Off__c</fullName>
    <label>Round Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>