force-app/main/default/objects/Quote/fields/Sales_Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Order Created</label>
    <type>Checkbox</type>
</CustomField>