force-app/main/default/objects/Quote/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>CASE(
    TEXT(Status),

    &quot;Draft&quot;,
    IMAGE(&quot;/resource/orange_image&quot;, &quot;Draft&quot;, 20, 20),
    &quot;In Review&quot;,
    IMAGE(&quot;/resource/orange_image&quot;, &quot;In Review&quot;, 20, 20),
   &quot;Needs Review&quot;,
    IMAGE(&quot;/resource/orange_image&quot;, &quot;Needs Review&quot;, 20, 20),
	
    &quot;Approved&quot;,
    IMAGE(&quot;/resource/green_image&quot;, &quot;Approved&quot;, 20, 20),
 &quot;Presented&quot;,
    IMAGE(&quot;/resource/green_image&quot;, &quot;Presented&quot;, 20, 20),
 &quot;Accepted&quot;,
    IMAGE(&quot;/resource/green_image&quot;, &quot;Accepted&quot;, 20, 20),

    &quot;Rejected&quot;,
    IMAGE(&quot;/resource/red_image&quot;, &quot;Rejected&quot;, 20, 20),
&quot;Denied&quot;,
    IMAGE(&quot;/resource/red_image&quot;, &quot;Denied&quot;, 20, 20),

    &quot;&quot;
)</formula>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>