force-app/main/default/objects/Quote/fields/Unloading_Charge__c.field-meta.xml
<CustomField>
    <fullName>Unloading_Charge__c</fullName>
    <label>Unloading Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>