force-app/main/default/objects/Quote/validationRules/Expiration_Date_Must_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Date_Must_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>ExpirationDate&lt;TODAY()</errorConditionFormula>
    <errorDisplayField>ExpirationDate</errorDisplayField>
    <errorMessage>Expiration Date must be a future date.</errorMessage>
</ValidationRule>