force-app/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Quote_Number_Link__c</columns>
    <columns>Status_Indicator__c</columns>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>CreatedBy</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Approval_Status__c</columns>
    <columns>Sales_Order_Created__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>